--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -117,7 +117,12 @@
       {% endif %}
       {% if author.wikipedia %}
         <li><a href="https://en.wikipedia.org/wiki/User:{{ author.wikipedia }}"><i class="fab fa-fw fa-wikipedia-w" aria-hidden="true"></i> Wikipedia</a></li>
-{% endif %}
+      {% endif %}
+      {% if author.links %}
+        {% for link in author.links %}
+          <li><a href="{{ link.url }}"><i class="{{ link.icon }}" aria-hidden="true"></i> {{ link.label }}</a></li>
+        {% endfor %}
+      {% endif %}
     </ul>
       <div class="author__urls_sm">
       {% if author.uri %}
@@ -212,6 +217,11 @@
       {% endif %}
       {% if author.wikipedia %}
         <a href="https://en.wikipedia.org/wiki/User:{{ author.wikipedia }}"><i class="fab fa-fw fa-wikipedia-w" aria-hidden="true"></i></a>
+      {% endif %}
+      {% if author.links %}
+        {% for link in author.links %}
+          <a href="{{ link.url }}"><i class="{{ link.icon }}" aria-hidden="true"></i></a>
+        {% endfor %}
       {% endif %}
     </div>
   </div>
